--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.546.0",
     "next": "16.0.0",
+    "nodemailer": "^7.0.10",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^5.0.4",
